logs/aqopa.log
Listing '.'...
Listing './aqopa'...
Listing './aqopa/library'...
Listing './aqopa/library/models'...
Listing './aqopa/library/models/db-simultaneous-clients'...
Listing './aqopa/library/models/qopml-comm'...
Listing './aqopa/library/models/reputation-with-data-protection'...
Listing './aqopa/library/models/roller-coaster'...
Listing './aqopa/library/models/wsn-join-network'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/AQoPA-0.9.5.egg-info'...
Listing './lib/python3.5/site-packages/aqopa'...
Listing './lib/python3.5/site-packages/aqopa/bin'...
Listing './lib/python3.5/site-packages/aqopa/bin/assets'...
Compiling './lib/python3.5/site-packages/aqopa/bin/console.py'...
***   File "./lib/python3.5/site-packages/aqopa/bin/console.py", line 90
    print  parser.lexer.current_state()
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aqopa/cmd.py'...
***   File "./lib/python3.5/site-packages/aqopa/cmd.py", line 41
    print "AQoPA (version %s)" % VERSION
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/aqopa/gui'...
Compiling './lib/python3.5/site-packages/aqopa/gui/run_panel_gui.py'...
***   File "./lib/python3.5/site-packages/aqopa/gui/run_panel_gui.py", line 212
    except EnvironmentDefinitionException, e:
                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/aqopa/model'...
Listing './lib/python3.5/site-packages/aqopa/model/parser'...
Listing './lib/python3.5/site-packages/aqopa/model/parser/lex_yacc'...
Listing './lib/python3.5/site-packages/aqopa/model/parser/lex_yacc/grammar'...
Listing './lib/python3.5/site-packages/aqopa/module'...
Listing './lib/python3.5/site-packages/aqopa/module/energyanalysis'...
Listing './lib/python3.5/site-packages/aqopa/module/financialanalysis'...
Listing './lib/python3.5/site-packages/aqopa/module/greenanalysis'...
Listing './lib/python3.5/site-packages/aqopa/module/qopanalysis'...
Listing './lib/python3.5/site-packages/aqopa/module/reputation'...
Listing './lib/python3.5/site-packages/aqopa/module/timeanalysis'...
Compiling './lib/python3.5/site-packages/aqopa/module/timeanalysis/gui.py'...
***   File "./lib/python3.5/site-packages/aqopa/module/timeanalysis/gui.py", line 1354
    except RuntimeException, e:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/aqopa/simulator'...
Compiling './lib/python3.5/site-packages/aqopa/simulator/communication.py'...
***   File "./lib/python3.5/site-packages/aqopa/simulator/communication.py", line 669
    print sender.name
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/aqopa/simulator/equation.py'...
***   File "./lib/python3.5/site-packages/aqopa/simulator/equation.py", line 206
    except EnvironmentDefinitionException, e:
                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/numpy'...
Listing './lib/python3.5/site-packages/numpy/.libs'...
Listing './lib/python3.5/site-packages/numpy/compat'...
Listing './lib/python3.5/site-packages/numpy/core'...
Listing './lib/python3.5/site-packages/numpy/core/include'...
Listing './lib/python3.5/site-packages/numpy/core/include/numpy'...
Listing './lib/python3.5/site-packages/numpy/core/lib'...
Listing './lib/python3.5/site-packages/numpy/core/lib/npy-pkg-config'...
Listing './lib/python3.5/site-packages/numpy/core/tests'...
Listing './lib/python3.5/site-packages/numpy/core/tests/data'...
Listing './lib/python3.5/site-packages/numpy/distutils'...
Listing './lib/python3.5/site-packages/numpy/distutils/command'...
Listing './lib/python3.5/site-packages/numpy/distutils/fcompiler'...
Listing './lib/python3.5/site-packages/numpy/distutils/mingw'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests'...
Listing './lib/python3.5/site-packages/numpy/doc'...
Listing './lib/python3.5/site-packages/numpy/f2py'...
Listing './lib/python3.5/site-packages/numpy/f2py/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/array_from_pyobj'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/assumed_shape'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/common'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/kind'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/mixed'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/parameter'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/regression'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/size'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/string'...
Listing './lib/python3.5/site-packages/numpy/fft'...
Listing './lib/python3.5/site-packages/numpy/fft/tests'...
Listing './lib/python3.5/site-packages/numpy/lib'...
Listing './lib/python3.5/site-packages/numpy/lib/tests'...
Listing './lib/python3.5/site-packages/numpy/lib/tests/data'...
Listing './lib/python3.5/site-packages/numpy/linalg'...
Listing './lib/python3.5/site-packages/numpy/linalg/tests'...
Listing './lib/python3.5/site-packages/numpy/ma'...
Listing './lib/python3.5/site-packages/numpy/ma/tests'...
Listing './lib/python3.5/site-packages/numpy/matrixlib'...
Listing './lib/python3.5/site-packages/numpy/matrixlib/tests'...
Listing './lib/python3.5/site-packages/numpy/polynomial'...
Listing './lib/python3.5/site-packages/numpy/polynomial/tests'...
Listing './lib/python3.5/site-packages/numpy/random'...
Listing './lib/python3.5/site-packages/numpy/random/tests'...
Listing './lib/python3.5/site-packages/numpy/testing'...
Listing './lib/python3.5/site-packages/numpy/testing/nose_tools'...
Listing './lib/python3.5/site-packages/numpy/testing/tests'...
Listing './lib/python3.5/site-packages/numpy/tests'...
Listing './lib/python3.5/site-packages/numpy-1.14.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ply'...
Listing './lib/python3.5/site-packages/ply-3.10.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sme'...
Listing './share'...
Listing './share/python-wheels'...
